# dream-team

./: .gitignore  README.md  azure.yaml  mcp_analytics_server.py  test_mcp_analytics_server.py
.github/workflows/: deploy-backend.yml  deploy-frontend.yml
backend/: .dockerignore  .gitignore  Dockerfile  README.md  aisearch.py  crud.py  database.py  magentic_one_custom_mcp_agent.py  magentic_one_custom_rag_agent.py  magentic_one_helper.py  main.py  mcp_math_server.py  pyproject.toml  requirements.txt  sample.py  sample_m1.py  schemas.py
backend/data/: customer_base.csv  customer_orders.csv  team-template.json
backend/data/ag-demo-fsi-upsell/: loan.xlsx
backend/data/ag-demo-retail/: Retail.xlsx
backend/data/ag-demo-safety/: Incidents + Regulatory.xlsx
backend/data/pred_maint/: maintenance.csv  sensor.csv
backend/data/teams-definitions/: team-1.json  team-10-hospitality.json  team-2.json  team-3.json  team-4.json  team-5.json  team-6.json  team-7.json  team-8.json  team-9-mcp.json  team-template.json  team-x-pre.json
frontend/: .gitignore  README.md  package-lock.json  package.json  sample.env  staticwebapp.config.json  swa-cli.config.json  tailwind.config.js
frontend/src/: index.css  main.tsx
frontend/src/components/: Footer.tsx  agents-definition.ts  agents-setup.tsx  app-sidebar.tsx  login.tsx  markdown-display.tsx  mode-toggle.tsx  nav-user.tsx  team-switcher.tsx
frontend/src/components/ui/: sidebar.tsx
frontend/src/contexts/: TeamsContext.tsx  UserContext.tsx
frontend/src/pages/: Agents.tsx  GeneralSettings.tsx  GetStarted.tsx  Introduction.tsx  Playground-history.tsx  Playground.tsx  _page_template.tsx
infra/: abbreviations.json  main.bicep  main.parameters.json
infra/app/: backend.bicep  frontend.bicep  src.bicep
infra/modules/new-modules/: openai.bicep
infra/modules/reuse-modules/: openai.bicep
infra/shared/: apps-env.bicep  netwk.bicep
mcp/: Dockerfile  README.md  api_key_auth.py  main.py  mcp_general_server.py  pyproject.toml
mcp/data/: bookings.csv  complaints.csv  inventory.csv  resolutions.csv  sensor.csv
src/: Dockerfile  README.md  app.py  magentic_one_custom_rag_agent.py  magentic_one_helper.py  pyproject.toml  requirements.txt
src/examples/: .env.sample  README.md  app13.py  m13.py  magentic_one_custom_agent.py  magentic_one_helper.py  pyproject.toml  rag_helper.py
