[project]
name = "backend"
version = "0.1.0"
description = "Backend for dream team project"
readme = "README.md"
requires-python = ">=3.10, <3.13"
dependencies = [
    "azure-identity>=1.19.0",
    "python-dotenv>=1.0.1",
    "autogen-agentchat==0.4.8.1",
    "autogen-ext[azure]==0.4.8.1",
    "autogen-ext[docker]==0.4.8.1",
    "autogen-core==0.4.8.1",
    "azure-search-documents==11.5.2",
    "markitdown==0.0.1",
    "aiofiles==24.1.0",
    "aiohttp==3.11.11",
    "playwright>=1.49.1",
    "azure-storage-blob",
    "fastapi-cors",
    "fastapi==0.109.2",  # Using a known compatible version with Pydantic 2.x
    "uvicorn>=0.34.0",
    "python-multipart",
    "tiktoken",
    "jinja2",
    "azure-cosmos"
]
